# FancyTasksNG

./: .gitignore  CHANGELOG.md  Makefile  README.MD  README.md  build.sh  iconinstall.sh  install.sh  testing.sh  update.sh
.agent/: rebranding_plan.md
.agent/rules/: project-context.md
.github/workflows/: release.yml
package/: metadata.json
package/contents/config/: ConfigAdvanced.qml  ConfigAppearance.qml  ConfigBehavior.qml  ConfigIndicators.qml  ConfigPage.qml  ConfigPinnedApps.qml  ConfigScrollView.qml  LivePreview.qml  config.qml  main.xml
package/contents/ui/: AudioStream.qml  AudioStreamManager.qml  Badge.qml  ConfigAppearance.qml  ConfigBehavior.qml  ConfigIndicators.qml  ConfigPinnedApps.qml  ContextMenu.qml  ExplosionEffect.qml  FancyTasksExplosion.qml  GroupDialog.qml  GroupExpanderOverlay.qml  Indicators.qml  MarqueeLabel.qml  MouseHandler.qml  PipeWireThumbnail.qml  PlacesSubMenu.qml  PlayerController.qml  PulseAudio.qml  ScrollableTextWrapper.qml  Task.qml  TaskBackendPrivate.qml  TaskBackendPublic.qml  TaskBadgeOverlay.qml  TaskIconBox.qml  TaskList.qml  main.qml  (+11 more)
package/translate/: ReadMe.md  build  get_metadata.sh  infiles.list  jsonParse.py  merge  nl.po  plasmoidlocaletest  pt_BR.po  ru.po  ru_RU.po  template.pot  zh_CN.po
plugin/: CMakeLists.txt  build  unitylauncher.cpp  unitylauncher.h
tools/: build.sh  compile_messages.sh  extract_messages.sh  functions.sh  install.sh  testing.sh  uninstall.sh  update.sh
tools/translate/: ReadMe.md  build  get_metadata.sh  merge  nl.po  plasmoidlocaletest  pt_BR.po  ru.po  template.pot  zh_CN.po
(+31 files in other folders)
